@@ -15,5 +15,8 @@
 #  limitations under the License.
 #
 
-JAVA_OPTS=""
-time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_breejesh
+source "$HOME/.sdkman/bin/sdkman-init.sh"
+sdk use java 21.0.4-amzn 1>&2
+
+JAVA_OPTS="--enable-preview"
+time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_azzu
